# excel-network

./: .env  .gitignore  .ignore  Cargo.toml  Cargo.toml~  Makefile.toml  README.md  Trunk.toml  index.css  index.html  postgres-docker.yml  shell.nix  styles.css
api/: .env  Cargo.toml
api/db/migrations/: 1_initial_schema.sql
api/src/: main.rs  service.rs
api/src/service/: column.rs  sheet.rs
client_models/: Cargo.toml
client_models/src/: lib.rs  main.rs
models/: #output.json#  Cargo.toml  Cargo.toml~  output  output.json  output.json~
models/src/: file.json~  lib.rs  lib.rs~  main.rs  main.rs~
scss/: style.scss
src/: app.rs  atoms.rs  main.rs  sheet.rs
src-tauri/: .env  Cargo.toml  Cargo.toml~  config  config.json  tauri.conf.json  tauri.conf.json~
src-tauri/src/: api.rs  main.rs
src/app/: sheet.rs
src/app/sheet/: add.rs  shared.rs  show.rs
ui/: Cargo.toml
ui/ui/: Home.slint  SheetHome.slint  SheetInsert.slint  SheetShow.slint  appwindow.slint  global.slint
