[workspace.package]
version = "0.3.0"
edition = "2021"

[package]
name = "excel-network-ui"
version.workspace = true
edition.workspace = true

[workspace]
members = ["src-tauri","models","api"]

[workspace.dependencies]
models = {path = "./models"}
serde = "^1"
serde_json = "^1"
chrono = "^0.4"
sqlx = "^0.6"
uuid = "^1"
dotenv  = "^0.15"
anyhow = "^1"
bigdecimal = "0.3.1"
bcrypt = "^0.13"
dirs = "5.0.1"
ciborium = "0.2.1"
ciborium-io = "0.2.1"
itertools = "^0.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
models = {workspace = true}
uuid = {workspace = true , features = ["serde"]}
chrono = {workspace = true , features = ["serde"]}
serde_json = {workspace = true}
bigdecimal = {workspace = true , features = ["serde"]}
serde = { workspace = true, features = ["derive","rc"] }
itertools = { workspace = true }
leptos = { version = "0.5.1" , features = ["csr"] }
leptos_router = { version = "0.5.1" , features = ["csr"]}
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys",features = ["tauri","event","dialog","path"] }
futures = "0.3.28"

[profile.wasm-release]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
