[package]
name = "api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
sqlx = { workspace = true, features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "json","migrate","bigdecimal" ] }
chrono = { workspace = true, features = ["serde"]}
bcrypt = { workspace = true }
dotenv = { workspace = true }
serde_derive = "1.0.8"
actix-web = "^4"
log = "^0.4"
env_logger = "^0.10"
