[package]
name = "models"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive","rc"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true}
dirs = { workspace = true}
ciborium = { workspace = true }
ciborium-io = { workspace = true, features = ["std"]}